# matryx

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  CYRUP_MATRIX_PLAN.md  Cargo.toml  DB.IMPLEMENTATION.md  DB.TASKLIST.md  DB.md  ENDPOINT_ANALYSIS.md  IMPLEMENTATION_PLAN.md  MATRIX_CLIENT_MIGRATION.md  ORPHANED_ROUTES.md  PROMPT  STUBS.md  SUMMARY.md  TASKLIST.md  TODO.md  build.rs  config.toml  cyrum.desktop  justfile  maxtryx.desktop  parse_errors.py  run_db_tests.sh  save_matrix_docs.sh  temp_check.rs
.config/: nextest.toml
.github/workflows/: matrix_compliance.yml
crates/cyrup-matrix/: .surrealdb  Cargo.toml  README.md  justfile
crates/cyrup-matrix/docs/surrealdb/surrealdb-client/: Cargo.toml  README.md  dependency_tree_surrealdb-client.txt
crates/cyrup-matrix/docs/surrealdb/surrealdb-client/examples/: graph_relationships.rs  surrealkv_showcase.rs  time_series.rs  vector_search.rs
crates/cyrup-matrix/docs/surrealdb/surrealdb-client/src/: client.rs  config.rs  dao.rs  db.rs  lib.rs  metrics.rs  migrations.rs
crates/cyrup-matrix/docs/surrealdb/surrealdb-client/tests/: dao_test.rs  surrealkv_test.rs
crates/cyrup-matrix/examples/: client_usage.rs
crates/cyrup-matrix/migrations/: migrations.yaml
crates/cyrup-matrix/src/: client.rs  commands.rs  encryption.rs  error.rs  future.rs  lib.rs  main.rs  media.rs  member.rs  notifications.rs  room.rs  store_traits.rs  sync.rs
crates/cyrup-matrix/src/db/: client.rs  config.rs  db.rs  error.rs  generic_dao.rs  metric.rs  migration.rs  mod.rs
crates/cyrup-matrix/src/db/dao/: account_data_dao.rs  api_cache_dao.rs  media_upload_dao.rs  message_dao.rs  mod.rs  presence_dao.rs  receipt_dao.rs  request_dependency_dao.rs  room_membership_dao.rs  room_state_dao.rs  send_queue_dao.rs
crates/cyrup-matrix/src/db/entity/: account_data.rs  encryption_data.rs  media_upload.rs  message.rs  mod.rs  presence.rs  receipt.rs  request_dependency.rs  room_state.rs  searchable_message.rs  send_queue_request.rs  user_profile.rs
crates/cyrup-matrix/src/db/migration/: 20250329_000000_initial_schema.sql  20250330_000001_matrix_state_store.sql
crates/cyrup-matrix/src/store/: cyrum_state_store.rs  mod.rs  surreal_state_store.rs
crates/cyrup-matrix/tests/integration/: db_operations.rs  main.rs
docs/: DB.IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  INVENTORY.md  MATRIX_CLIENT_MIGRATION.md  MATRIX_CLIENT_SURREALDB_INTERFACE.md  MATRIX_GLOSSARY.md  MATRIX_SDK_STATE_STORE.md  MATRIX_SURREALDB_INTEGRATION_PLAN.md  SURREALDB_3_ANALYSIS.md  SURREALDB_LIVEQUERY_ANALYSIS.md  cyrum.metainfo.xml
docs/SURREALDB/: graph_relationships.md  surreal.md  surrealkv_showcase.md  time_series.md  vector_search.md
docs/SURREALDB_GUIDE/: surrealdb_v2.3.3_comprehensive.md  surrealdb_v2.3.3_reference.md
docs/SURREALDB_MIGRATION_GUIDE/: migration_v2.2.md  migration_v2.3.md
docs/matrix-sdk/: client.md  client_v0.11.md  index.md  modules.md
docs/ratatui/: advanced-topics.md  backend-integration.md  clipboard-implementation.md  custom-widgets.md  events.md  home.md  input-handling.md  layout.md  styling.md  text-handling.md  widgets.md
examples/: dialog.rs  dialog_manager.rs  specialized_dialogs.rs  textbox.rs  window_layouts.rs  window_manager.rs  window_manipulation.rs
spec/: MATRIX_CLIENT_SPEC.md  MATRIX_DOMAIN.md  MATRIX_SERVER_ENDPOINTS.md  MATRIX_SERVER_SPEC.md
spec/client/: 01_foundation_api.md  02_rooms_users.md  04_security_encryption.md  05_advanced_features.md  06_user_experience.md  07_relationship_features.md  README.md
spec/server/: 01-introduction.md  05-transactions.md  08-room-state.md  09-room-joins.md  10-room-leaves.md  11-room-invites.md  12-room-knocking.md  13-public-rooms.md  17-device-management.md  18-send-to-device.md  19-content-repository.md  21-signing-events.md  22-backfill-events.md  23-retrieving-events.md  24-spaces.md  26-openid.md  27-end-to-end-encryption.md
spec_audit/client/: 01_foundation_api.md  02_rooms_users.md  03_messaging_communication.md  04_security_encryption.md  05_advanced_features.md  06_user_experience.md  07_relationship_features.md
spec_audit/server/: 02-server-discovery.md  03-server-keys.md  04-authentication.md  05-transactions.md  06-pdus.md  07-edus.md  09-room-joins.md  10-room-leaves.md  11-room-invites.md  12-room-knocking.md  13-public-rooms.md  14-typing-notifications.md  15-presence.md  16-receipts.md  19-content-repository.md  20-server-acls.md  22-backfill-events.md  23-retrieving-events.md  24-spaces.md  25-querying-information.md  26-openid.md  27-end-to-end-encryption.md  (+1 more)
src/: config.rs  cyrum_window.rs  lib.rs  main.rs  notifications.rs  window_manager.rs  worker.rs
task/: CLEANUP_02_remove_backward_compat_xmatrix.md  CLEANUP_04_remove_backward_compat_media.md  CLEANUP_05_remove_hardcoded_sso_urls.md  CLEANUP_07_remove_hardcoded_msisdn_url.md  CLEANUP_09_make_protocol_configurable.md  CPUCACHE_1.md  CRYPTO_1.md  DEVLEFT_1.md  DEVMSG_1.md  DUMMY_1.md  DUMMY_2.md  ERRFIX_1.md  EXPECT_1.md  INSTUB_1.md  INSTUB_2.md  INSTUB_3.md  INSTUB_4.md  INSTUB_5.md  INSTUB_6.md  LEGACY_1.md  MEDIAFIX_1.md  PAGEFIX_1.md  PLACEHL_1.md  README.md  RECEIPT_1.md  REMAINING_ISSUES.md  SCHEMA_6.md  SPEC_CLIENT_01_typing_indicators.md  SPEC_CLIENT_02_receipts.md  SPEC_CLIENT_ANALYSIS_SUMMARY.md  SPEC_FEDERATION_00.md  SPEC_FEDERATION_00_SUMMARY.md  SPEC_FEDERATION_01_send_join_v2_stub.md  SPEC_FEDERATION_02_send_leave_v2_stub.md  SPEC_FEDERATION_03_send_knock_missing.md  SPEC_FEDERATION_04_make_knock_missing.md  SPEC_FEDERATION_05_invite_v2_missing.md  SPEC_FEDERATION_06_public_rooms_missing.md  SPEC_FEDERATION_07_query_directory_missing.md  SPEC_FEDERATION_08_3pid_onbind_missing.md  (+43 more)
tmp/: IMPLEMENTATION_ANALYSIS.md  matrix-server-discovery-spec.md  matrix_dns_resolver_example.rs  matrix_oauth2_scopes.md  matrix_oauth2_scopes_msc2967.md  matrix_server_auth.html  matrix_server_discovery_specification.md  matrix_v1.3_destination_spec.md  oauth2_rfc6749_scope_spec.md  oidc_standard_scopes.md  rfc2046.txt  rust_error_handling_patterns.md  verification_results.md  verify_error_chain.rs
(+49 files in other folders)
