[package]
name = "cyrum"
version = "0.0.11-alpha.1"
edition = "2021"
authors = ["David Maple <david@cyrup.ai>"]
repository = "https://github.com/cyrup-ai/cyrum"
homepage = "https://cyrup.ai"
readme = "README.md"
description = "A Matrix chat client with SurrealDB local storage"
license = "Apache-2.0"
exclude = [".github", "CONTRIBUTING.md"]
keywords = ["matrix", "chat", "tui", "vim"]
categories = ["command-line-utilities"]
rust-version = "1.76"
build = "build.rs"

[features]
default = ["desktop"]
desktop = ["dep:notify-rust"]

[dependencies]
anyhow = "1.0"
bitflags = "^2.9"
chrono = "0.4"
clap = {version = "~4.5", features = ["derive"]}
css-color-parser = "0.1.2"
dirs = "6.0.0"
emojis = "0.6"
futures = "0.3"
gethostname = "1.0.1"
html5ever = "0.30.0"
image = "0.25.6"
libc = "0.2"
markup5ever_rcdom = "0.3.0"
mime = "^0.3.17"
mime_guess = "^2.0.5"
nom = "8.0.0"
open = "5.3.2"
rand = "0.9.0"
ratatui = { version = "0.30.0-alpha.2", features = [] } 
ratatui-image = { version = "3.0.0", features = ["serde"] }
regex = "^1.11"
rpassword = "^7.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sled = "0.34.7"
temp-dir = "0.1.14"
thiserror = "2.0.12"
toml = "^0.8.20"
tracing = "~0.1.41"
tracing-appender = "~0.2.3"
tracing-subscriber = "0.3.19"
unicode-segmentation = "^1.12"
unicode-width = "0.2.0"
url = {version = "^2.5.4", features = ["serde"]}
edit = "0.1.5"
humansize = "2.1.3"
surrealdb-migrations = "2.2.0"
crossterm = "0.28.1"
clipboard = "0.5.0"
syntect = "5.2.0"
lazy_static = "1.5.0"
cyrup-matrix = { version = "0.1.0", path = "crates/cyrup-matrix" }
uuid = "1.16.0"
hex = "0.4.3"
base64 = "0.22.1"
surrealdb = { version = "2.2.1", features = ["kv-surrealkv"] }
include_dir = "0.7.4"

[dependencies.comrak]
version = "0.37.0"
default-features = false
features = ["shortcodes"]

[dependencies.notify-rust]
version = "~4.11.6"
default-features = false
features = ["zbus", "serde"]
optional = true

# Removed modalkit dependencies

[dependencies.matrix-sdk]
version = "0.10.0"
default-features = false
features = ["e2e-encryption", "native-tls", "sso-login"]

[dependencies.tokio]
version = "1.44.1"
features = ["macros", "net", "rt-multi-thread", "sync", "time"]

[dev-dependencies]
lazy_static = "1.5.0"
pretty_assertions = "1.4.1"
tempfile = "3.19.1"

[profile.release-lto]
inherits = "release"
incremental = false
lto = true

[build-dependencies]
vergen = { version = "9.0.2", features = ["build", "time"] }

[package.metadata.deb]
section = "net"
license-file = ["LICENSE", "0"]
assets = [
    # Binary:
    ["target/release/cyrum", "usr/bin/cyrum", "755"],
    # Manual pages:
    ["docs/cyrum.1", "usr/share/man/man1/cyrum.1", "644"],
    ["docs/cyrum.5", "usr/share/man/man5/cyrum.5", "644"],
    # Other assets:
    ["cyrum.desktop", "usr/share/applications/cyrum.desktop", "644"],
    ["config.example.toml", "usr/share/cyrum/config.example.toml", "644"],
    ["docs/cyrum.svg", "usr/share/icons/hicolor/scalable/apps/cyrum.svg", "644"],
    ["docs/cyrum.metainfo.xml", "usr/share/metainfo/cyrum.metainfo.xml", "644"],
]

[package.metadata.generate-rpm]
assets = [
    # Binary:
    { source = "target/release/cyrum", dest = "/usr/bin/cyrum", mode = "755" },
    # Manual pages:
    { source = "docs/cyrum.1", dest = "/usr/share/man/man1/cyrum.1", mode = "644" },
    { source = "docs/cyrum.5", dest = "/usr/share/man/man5/cyrum.5", mode = "644" },
    # Other assets:
    { source = "cyrum.desktop", dest = "/usr/share/applications/cyrum.desktop", mode = "644" },
    { source = "config.example.toml", dest = "/usr/share/cyrum/config.example.toml", mode = "644"},
    { source = "docs/cyrum.svg", dest = "/usr/share/icons/hicolor/scalable/apps/cyrum.svg", mode = "644"},
    { source = "docs/cyrum.metainfo.xml", dest = "/usr/share/metainfo/cyrum.metainfo.xml", mode = "644"},
]
