[package]
name = "cyrup-matrix"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Matrix SDK integration for Cyrum"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/cyrum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1.77"
async-stream = "0.3.5"

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
base64 = "0.21.7"

# Logging & error handling
tracing = "0.1.40"
thiserror = "1.0.56"
anyhow = "1.0.79"

# Time utilities
chrono = { version = "0.4.34", features = ["serde"] }

# Matrix SDK
matrix-sdk-base = "0.10.0" 
matrix-sdk = "0.10.0"

# Database
surrealdb = { version = "2.2.1", features = ["kv-surrealkv"] }

# UUID generation
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# Other
growable-bloom-filter = "2.0.1"
surrealdb-migrations = "2.2.0"
include_dir = "0.7.4"
once_cell = "1.19.0"
tokio-stream = "0.1.17"

[dev-dependencies]
serial_test = "3.0.0"
tempfile = "3.10.0"

[lib]
name = "cyrup_matrix"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"
