[package]
name = "surrealdb-client"
version.workspace = true
edition.workspace = true
description = "Configurable SurrealDB client with DAO pattern support"
authors = ["Cyrup AI <devteam@cyrup.ai>"]
license = "MIT"

[features]
default = []
rustls = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
lazy_static = { workspace = true }
metrics = { workspace = true }
surrealdb = { workspace = true, features = ["kv-surrealkv", "kv-tikv", "protocol-ws"] }
bytes = { workspace = true }
surrealdb-migrations = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

